<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_register"
            android:title="@string/menu_register"
            android:icon="@drawable/ic_register"/>
        <item
            android:id="@+id/nav_monitor"
            android:title="@string/menu_monitor"
            android:icon="@drawable/ic_monitor"/>

        <item
            android:id="@+id/nav_statistic"
            android:title="@string/menu_statistic"
            android:icon="@drawable/ic_monitor"/>

        <item
            android:id="@+id/nav_alarm"
            android:title="@string/menu_alarm"
            android:icon="@drawable/ic_alarm"
            android:checkable="true"
            app:actionViewClass="android.widget.Switch"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_notice"
            android:title="@string/menu_notice"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/nav_info"
            android:title="@string/menu_info"
            android:icon="@drawable/ic_notice"/>
        <item
            android:id="@+id/nav_share"
            android:title="@string/menu_share"
            android:icon="@drawable/ic_share"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_setting"/>
    </group>

</menu>
